Fix Chrome focus jumping in SourceStructureExplorer
A change in Chrome results in different behavior when focusing an
invisible element. When the list is longer than the panel, this
results in the panel scrolling-to-top. The fix applied is adapted from
[this issue](https://github.com/gwtproject/gwt/issues/9475#issuecomment-277777989)
on the GWT Github repository.

--- a/appinventor/appengine/war/Ya.css
+++ b/appinventor/appengine/war/Ya.css
@@ -615,6 +615,11 @@ select {
   font-size: 12px;
   color: #555;
   cursor: default;
+  display: block !important;
+}
+
+.gwt-Tree .gwt-TreeItem-selected {
+  background: none;
 }
 
 .gwt-Tree .gwt-TreeItem span {
